--- a/src/app/reporte/reporte.component.html
+++ b/src/app/reporte/reporte.component.html
@@ -170,11 +170,11 @@
                 <table class="table ">
                   <thead class="text-primary red-bold-text">
                     <th>Nº</th>
-                    <th>Plato</th>
-                    <th>Precio</th>
-                    <th>Cantidad</th>
-                    <th>Precio final</th>
-                    <th>Fecha</th>
+                    <th>Menús</th>
+                    <th>Precios</th>
+                    <th>Cantidades</th>
+                    <th>Precios finales</th>
+                    <th>Fechas</th>
                  
                   </thead>
                   
