--- a/src/app/tipoalimentos/tipoalimentos.component.html
+++ b/src/app/tipoalimentos/tipoalimentos.component.html
@@ -97,7 +97,7 @@
     
         <div class="card text-center">
           <div class="card-header card-header-danger">
-            <h4 class="card-title disabled"> <img src="/assets/img/mn.png" class="edit" alt=""> Menú diario</h4>
+            <h4 class="card-title disabled"> <img src="/assets/img/mn.png" class="edit" alt=""> Menús diarios</h4>
           </div>
           <div class="card-body">
             <div class="table-responsive">
