--- a/src/app/recetario/recetario.component.scss
+++ b/src/app/recetario/recetario.component.scss
@@ -13,7 +13,10 @@ img {
   .selected {
     background-color: rgb(43, 255, 0);
   }
-  
+  .cursore{
+    cursor: pointer;
+    
+  }
   .fl{
     width: 190px;
     margin-left: 600px;
