--- a/src/app/reporte-politecnico/reporte-politecnico.component.html
+++ b/src/app/reporte-politecnico/reporte-politecnico.component.html
@@ -59,7 +59,7 @@
               </div>
               <p class="card-category">Generar </p>
               <h3 class="card-title">Listado de Usuarios
-                <small>ADMINISTRADOR</small></h3>
+                <small>ADMINISTRADOR/CAJERO</small></h3>
             </div>
             <div class="card-footer">
               <div class="stats">
