--- a/src/app/alimentos/alimentos.component.scss
+++ b/src/app/alimentos/alimentos.component.scss
@@ -13,7 +13,10 @@ img {
   color: #ffffff;
 }
 
-
+.formmm {
+  width: 100%;
+  height: 100%;
+}
 .formmm3 {
   margin-left: 30px;
   width: 900px;
@@ -108,6 +111,18 @@ th {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
  
 }
+.estilosversion2 {
+  content: "";
+  margin-top: 10px;
+  /* Espacio de 5 píxeles arriba de cada opción */
+  border: none;
+  /* Removemos todos los bordes */
+  border-bottom: 1px solid #888888;
+  /* Agregamos solo el borde inferior */
+  width: 265px;
+  font-size: 18px;
+  
+}
 
 .search-box {
   flex: 1;
@@ -168,6 +183,17 @@ th {
   width: 500px;
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+
+.headsV2 {
+  background-color: rgb(206, 25, 25);
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  display: flex;
+  //justify-content: center;
   align-items: center;
 }
 
@@ -297,10 +323,21 @@ header {
   height: 25px;
   width: 25px;
 }
+
+.tamV2{
+  width: 800px;
+}
 .col{
   color: #ffffff;
 }
 
 .dropdown-menu{
   cursor: pointer;
+}
+
+
+.modal-dialogV2 {
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
