--- a/src/app/credito/credito.component.html
+++ b/src/app/credito/credito.component.html
@@ -3,10 +3,144 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman:wght@400;700&display=swap" rel="stylesheet">
 
-<img src="/path/to/icons/example-icon.svg" alt="An example icon" style="width:24px;height:24px" />
 
 
 
+
+<div class="main-content">
+  
+
+
+
+ 
+  <div class="wrapper  ">
+    <div class="sidebar  " data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+      
+      <div class="logo ">
+        <a  class="simple-text"  *ngIf="usuariosss">
+            <div class=" ">
+              <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="  circular-image">
+  
+            </div> 
+            <div class="letrausua">
+              {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
+            </div>
+         
+    
+        </a>
+        
+        
+    </div>
+    
+    
+    <div class="sidebar-wrapper   ">
+        <br>
+          
+        <div class="text-center esp" routerLink="/perfilcajero"  >
+          <span  class="icon-text "><i class="material-icons cl">home</i> </span> <span class="icon-text">Inicio</span>
+        </div>  
+    
+      <div *ngIf="isMobileMenu()">
+       
+     
+        <ul class="nav navbar-nav nav-mobile-menu">
+          
+            <li class="nav-item dropdown">
+             
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Mike John responded to your email</a>
+                    <a class="dropdown-item" href="#">You have 5 new tasks</a>
+                    <a class="dropdown-item" href="#">You're now friend with Andrew</a>
+                    <a class="dropdown-item" href="#">Another Notification</a>
+                    <a class="dropdown-item" href="#">Another One</a>
+                </div>
+            </li>
+         
+        </ul>
+      </div>
+      <ul class="nav">
+        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item curr">
+          <a class="nav-link curr" (click)="menuItem.path === '/login' ? showModalcerrar() : navigateToRoute(menuItem.path)">
+            <i class="material-icons">{{menuItem.icon}}</i>
+            <p>{{menuItem.title}}</p>
+          </a>
+        </li>
+      </ul>
+      
+
+
+      
+      
+    </div>
+        
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+    </div>
+    <div class="main-panel">
+
+              <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <nav class="navbar navbar-expand-lg navbar  navbar-absolute fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-wrapper">
+                    <img src="assets/img/log.png" alt="" class="logonavbar">
+                   
+                </div>
+                
+
+                <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon"    class="navbar-toggler" type="button" (click)="sidebarToggle()">
+                  
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse justify-content-end " id="navigation" >
+                  
+                    <ul class="navbar-nav">
+                      
+                        
+                       
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+        <router-outlet>
+          <br><br> 
+   
 <div class="main-content">
   <div class="container-fluid">
 
@@ -141,6 +275,66 @@
   </div>
 </div>
     
+      
+ 
+        </router-outlet>
+        <div *ngIf="isMaps('maps')">
+            <app-footer>
+  
+              
+            </app-footer>
+        </div>
+    </div>
+    
+  </div>
+  
+  
+  
+   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+   </div>
+  
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 
 
