--- a/src/app/listadoadministradores/listadoadministradores.component.html
+++ b/src/app/listadoadministradores/listadoadministradores.component.html
@@ -1,143 +1,409 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
-
-<div class="main-content">
+<div class="main-content" style="background-color: #ebebeb; padding: 20px;">
   <div class="container-fluid">
-    <div class="search-container col-md-12">
-        <label class="label"  for="nombreproductoFiltro">Buscar la cedula:</label>
-        <div class="search-box">
-          <input type="text" 
-          class="form-control"
-         
-        
-          [(ngModel)]="nombreproductoFiltro" (input)="aplicarFiltros()"  />
-         
-        </div>
-     
-        
-      </div>
-
-    <div class="row">
-
+    
+    <div class="form-row">
       <div class="col-md-12">
 
-        <div class="card">
-          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
-            <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios administradores</h4>
-        
-
-            <li class="nav-item dropdown">
-              <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
-                Descargar    <i class="material-icons">file_download</i> 
-                
-                  <p>
-                      <span class="d-lg-none d-md-block"></span>
-                  </p>
-              </a>
-              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
-                  <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
-                
-                  
-              </div>
-          </li>
-          </div>
-          <div class="card-body text-center">
-            <div class="table-responsive">
-              <table class="table ">
-                <thead class=" text-primary">
-                  <th>
-                    No
-                  </th>
-                  <th>
-                    Usuario
-                  </th>
-                  <th>
-                    Apellido1
-                  </th>
-                 
-                  <th>
-                    Apellido2
-                  </th>
-                  <th>
-                    Nombre1
-                  </th>
-                  <th>
-                    Nombre2
-                  </th>
-                 
-                  <th>
-                    Email
-                  </th>
-                  <th>
-                    Teléfono
-                  </th>
-                  <th>
-                    Foto
-                  </th>
-              
-
-                </thead>
-                <tbody>
-                    <ng-container *ngFor="let item of pagedMenus; let i = index">
-                        <ng-container *ngIf="(!nombreproductoFiltro || item.Identificacion.toLowerCase().includes(nombreproductoFiltro.toLowerCase()))">
-      
-                  <tr>
-                    <td>
-                      {{i+1}}
-                    </td>
-                    <td>
-                      {{item.Identificacion}}
-                    </td>
-                   
-                    <td>
-                      {{item.persona.Apellido1}}
-                    </td>
-                    <td>
-                      {{item.persona.Apellido2}}
-                    </td>
-                    <td>
-                      {{item.persona.Nombre1}}
-                    </td>
-                    <td>
-                      {{item.persona.Nombre2}}
-                    </td>
-                    <td>
-                      {{item.persona.EmailInstitucional}}
-                    </td>
-                    <td>
-                      {{item.persona.TelefonoC}}
-                    </td>
-                    <td>
-                      <img *ngIf="item.persona.foto" [src]="'http://localhost:3000/imagenes/' + item.persona.foto" alt="Foto de usuario" class="circular-image">
-                    </td>
-                 
-
-                  </tr>
-
-                  
-                </ng-container>
-            </ng-container>
-                </tbody>
-              </table>
-            </div>
-
-                  <!-- Contenedor para centrar la paginación -->
-  <div class="pagination-containerrrr">
-    <!-- Paginación -->
-    <div class="pagination">
-      <button (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1"><i  class="fa fa-arrow-left  "></i> Anterior</button>
-      <span class="k">Página {{ currentPage }} de {{ totalPages }}</span>
-      <button (click)="onPageChange(currentPage + 1)" [disabled]="currentPage === totalPages">Siguiente <i  class="fa fa-arrow-right"></i></button>
+    <!-- Pestañas asincrónicas -->
+    <div *ngIf="(asyncTabs | async) === null">
+     
     </div>
-  </div>
+
+    
+    <mat-tab-group *ngIf="(asyncTabs | async) !== null">
+      <mat-tab *ngFor="let tab of asyncTabs | async">
+        <ng-template mat-tab-label>{{ tab.label }}</ng-template>
+        <!-- Contenido de la pestaña "Sin créditos" -->
+        <div *ngIf="tab.label === 'Administradores'">
+
+        
+        
+   
+        
+          <div class="container-fluid"> <br><br>
+            <div class="search-container col-md-12">
+              <label class="label"  for="nombreproductoFiltro">Buscar el cédula:</label>
+              <div class="search-box">
+                <input type="text" 
+                class="form-control"
+               
+              
+                [(ngModel)]="nombreproductoFiltro" (input)="aplicarFiltros()"  />
+               
+              </div>
+           
+              
+            </div>
+          
+            <div class="row">
+          
+              <div class="col-md-12">
+          
+                <div class="card">
+                  <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
+                    <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios Administradores</h4>
+                   
+                    <li class="nav-item dropdown">
+                      <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                        Descargar    <i class="material-icons">file_download</i> 
+                        
+                          <p>
+                              <span class="d-lg-none d-md-block"> </span>
+                          </p>
+                      </a>
+                      <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                          <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                        
+                          
+                      </div>
+                  </li>
+          
+                  </div>
+                  <div class="card-body text-center">
+                    <div class="table-responsive">
+                      <table class="table">
+                        <thead class=" text-primary">
+                          <th>
+                            No
+                          </th>
+                          <th>
+                            Usuario
+                          </th>
+                          <th>
+                            Apellido1
+                          </th>
+                         
+                          <th>
+                            Apellido2
+                          </th>
+                          <th>
+                            Nombre1
+                          </th>
+                          <th>
+                            Nombre2
+                          </th>
+                         
+                          <th>
+                            Email
+                          </th>
+                          <th>
+                            Teléfono
+                          </th>
+                          <th>
+                            Foto
+                          </th>
+                      
+                          <th>
+                            Acción
+                          </th>
+          
+                        </thead>
+                        <tbody >
+                          <ng-container *ngFor="let item of pagedMenus; let i = index">
+                            <ng-container *ngIf="(!nombreproductoFiltro || item.Identificacion.toLowerCase().includes(nombreproductoFiltro.toLowerCase()))">
+           
+                          <tr>
+                            <td>
+                              {{i+1}}
+                            </td>
+                            <td>
+                              {{item.Identificacion}}
+                            </td>
+                           
+                            <td>
+                              {{item.persona.Apellido1}}
+                            </td>
+                            <td>
+                              {{item.persona.Apellido2}}
+                            </td>
+                            <td>
+                              {{item.persona.Nombre1}}
+                            </td>
+                            <td>
+                              {{item.persona.Nombre2}}
+                            </td>
+                            <td>
+                              {{item.persona.EmailInstitucional}}
+                            </td>
+                            <td>
+                              {{item.persona.TelefonoC}}
+                            </td>
+                            <td>
+                              <img *ngIf="item.persona.foto" [src]="'http://localhost:3000/imagenes/' + item.persona.foto" alt="Foto de usuario" class="circular-image">
+                            </td>
+                            <td>
+                              <button0 color="primary" (click)="editcontrasena(item)">
+                                <i class="material-icons  editable-row" data-toggle="modal"
+                                  data-target="#ventanaContrasena">https</i>
+                              </button0>
+                             
+          
+                              <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                              </button2>
+                             
+          
+                         
+                              
+                              
+                              
+                              
+                              
+                              
+          
+          
+          
+                            </td>
+          
+                          </tr>
+          
+                               
+                        </ng-container>
+                      </ng-container>
+                        </tbody>
+                      </table>
+                    </div>
+          
+          
+                        <!-- Contenedor para centrar la paginación -->
+          <div class="pagination-containerrrr">
+            <!-- Paginación -->
+            <div class="pagination">
+              <button (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1"><i  class="fa fa-arrow-left  "></i> Anterior</button>
+              <span class="k">Página {{ currentPage }} de {{ totalPages }}</span>
+              <button (click)="onPageChange(currentPage + 1)" [disabled]="currentPage >= totalPages">
+                Siguiente <i class="fa fa-arrow-right"></i>
+              </button>     </div>
           </div>
+                  </div>
+                </div>
+              </div>
+          
+            </div>
+          </div>
+          
+        
+          
+          
+
+
+        </div>
+
+<!-- ----------------------------------------------------------------------------------------------------------------------------------------->
+       
+        <!-- Contenido de la pestaña "Con Créditos" -->
+        <div *ngIf="tab.label === 'Cajeros'">
+<br>
+ 
+       
+<div class="container-fluid"> <br><br>
+  <div class="search-container col-md-12">
+    <label class="label"  for="nombreproductoFiltro">Buscar el cédula:</label>
+    <div class="search-box">
+      <input type="text" 
+      class="form-control"
+     
+    
+      [(ngModel)]="nombreproductoFiltro" (input)="aplicarFiltros()"  />
+     
+    </div>
+ 
+    
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-12">
+
+      <div class="card">
+        <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
+          <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios Cajeros</h4>
+         
+          <li class="nav-item dropdown">
+            <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+              Descargar    <i class="material-icons">file_download</i> 
+              
+                <p>
+                    <span class="d-lg-none d-md-block"> </span>
+                </p>
+            </a>
+            <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" (click)="descargarDatosCajero()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                <a class="dropdown-item" (click)="descargarPDFCajero()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+              
+                
+            </div>
+        </li>
+
+        </div>
+        <div class="card-body text-center">
+          <div class="table-responsive">
+            <table class="table">
+              <thead class=" text-primary">
+                <th>
+                  No
+                </th>
+                <th>
+                  Usuario
+                </th>
+                <th>
+                  Apellido1
+                </th>
+               
+                <th>
+                  Apellido2
+                </th>
+                <th>
+                  Nombre1
+                </th>
+                <th>
+                  Nombre2
+                </th>
+               
+                <th>
+                  Email
+                </th>
+                <th>
+                  Teléfono
+                </th>
+                <th>
+                  Foto
+                </th>
+            
+                <th>
+                  Acción
+                </th>
+
+              </thead>
+              <tbody >
+                <ng-container *ngFor="let item of pagedMenusV2; let i = index">
+                  <ng-container *ngIf="(!nombreproductoFiltroV2 || item.Identificacion.toLowerCase().includes(nombreproductoFiltroV2.toLowerCase()))">
+ 
+                <tr>
+                  <td>
+                    {{i+1}}
+                  </td>
+                  <td>
+                    {{item.Identificacion}}
+                  </td>
+                 
+                  <td>
+                    {{item.persona.Apellido1}}
+                  </td>
+                  <td>
+                    {{item.persona.Apellido2}}
+                  </td>
+                  <td>
+                    {{item.persona.Nombre1}}
+                  </td>
+                  <td>
+                    {{item.persona.Nombre2}}
+                  </td>
+                  <td>
+                    {{item.persona.EmailInstitucional}}
+                  </td>
+                  <td>
+                    {{item.persona.TelefonoC}}
+                  </td>
+                  <td>
+                    <img *ngIf="item.persona.foto" [src]="'http://localhost:3000/imagenes/' + item.persona.foto" alt="Foto de usuario" class="circular-image">
+                  </td>
+                  <td>
+                    <button0 color="primary" (click)="editcontrasena(item)">
+                      <i class="material-icons  editable-row" data-toggle="modal"
+                        data-target="#ventanaContrasena">https</i>
+                    </button0>
+                   
+
+                    <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
+                    </button2>
+                   
+
+               
+                    
+                    
+                    
+                    
+                    
+                    
+
+
+
+                  </td>
+
+                </tr>
+
+                     
+              </ng-container>
+            </ng-container>
+              </tbody>
+            </table>
+          </div>
+
+
+              <!-- Contenedor para centrar la paginación -->
+<div class="pagination-containerrrr">
+  <!-- Paginación -->
+  <div class="pagination">
+    <button (click)="onPageChangeV2(currentPageV2 - 1)" [disabled]="currentPageV2 === 1"><i  class="fa fa-arrow-left  "></i> Anterior</button>
+    <span class="k">Página {{ currentPageV2 }} de {{ totalPagesV2 }}</span>
+    <button (click)="onPageChangeV2(currentPageV2 + 1)" [disabled]="currentPageV2 >= totalPagesV2">
+      Siguiente <i class="fa fa-arrow-right"></i>
+    </button>     </div>
+</div>
         </div>
       </div>
-
     </div>
+
   </div>
 </div>
 
+        
+           
+  
+  
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+<!-- Modal Contraseña -->
+<div class="modal fade" id="ventanaContrasena" data-backdrop="static" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content d-flex align-items-center">
+      <div class=" heads x">
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Contraseña <img
+            src="assets/img/contrasena.png" alt=""></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="usuarioForm2">
+          <div class="form-group col-md-8">
+            <label for="inputState" class="select-gr">Contraseña</label> <br>
+            <input class="example-full-width estilos" type="text" formControlName="contrasena">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-danger" (click)=" editarContrasena()" data-dismiss="modal">Guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
