--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -1,6 +1,140 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
+<div class="main-content">
+  
+
+
+
+ 
+  <div class="wrapper  ">
+    <div class="sidebar  " data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+      
+      <div class="logo ">
+        <a  class="simple-text"  *ngIf="usuariosss">
+            <div class=" ">
+              <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="  circular-image">
+  
+            </div> 
+            <div class="letrausua">
+              {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
+            </div>
+         
+    
+        </a>
+        
+        
+    </div>
+    
+    
+    <div class="sidebar-wrapper   ">
+        <br>
+          
+        <div class="text-center esp" routerLink="/perfilcajero"  >
+          <span  class="icon-text "><i class="material-icons cl">home</i> </span> <span class="icon-text">Inicio</span>
+        </div>  
+    
+      <div *ngIf="isMobileMenu()">
+       
+     
+        <ul class="nav navbar-nav nav-mobile-menu">
+          
+            <li class="nav-item dropdown">
+             
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Mike John responded to your email</a>
+                    <a class="dropdown-item" href="#">You have 5 new tasks</a>
+                    <a class="dropdown-item" href="#">You're now friend with Andrew</a>
+                    <a class="dropdown-item" href="#">Another Notification</a>
+                    <a class="dropdown-item" href="#">Another One</a>
+                </div>
+            </li>
+         
+        </ul>
+      </div>
+      <ul class="nav">
+        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item curr">
+          <a class="nav-link curr" (click)="menuItem.path === '/login' ? showModalcerrar() : navigateToRoute(menuItem.path)">
+            <i class="material-icons">{{menuItem.icon}}</i>
+            <p>{{menuItem.title}}</p>
+          </a>
+        </li>
+      </ul>
+      
+
+
+      
+      
+    </div>
+        
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+    </div>
+    <div class="main-panel">
+
+              <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <nav class="navbar navbar-expand-lg navbar  navbar-absolute fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-wrapper">
+                    <img src="assets/img/log.png" alt="" class="logonavbar">
+                   
+                </div>
+                
+
+                <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon"    class="navbar-toggler" type="button" (click)="sidebarToggle()">
+                  
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse justify-content-end " id="navigation" >
+                  
+                    <ul class="navbar-nav">
+                      
+                        
+                       
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+        <router-outlet>
+         <br>
+   
 <div class="main-content" style="background-color: #ebebeb; padding: 20px;">
   <div class="container-fluid">
     
@@ -82,11 +216,12 @@
                         <div class="input-group">
                           
                           
-
                           <div style="display: flex; align-items: center; justify-content: flex-end;">
-                            <input type="search" class="form-control mb-2" placeholder="Buscar menú"   [(ngModel)]="filtro" (input)="filtrarPlatos()" >
+                            <input type="search" class="form-control mb-2" placeholder="Buscar menú" [(ngModel)]="filtro" (input)="filtrarPlatos()">
                             <i class="fa fa-search bm" aria-hidden="true" style="margin-left: 5px;"></i>
                           </div>
+
+                          
                         </div>
                       </div>
                     </div>
@@ -106,19 +241,15 @@
                           <th>Cantidad</th>
                         </tr>
                         <ng-container *ngFor="let plato of platosFiltrados; let i = index">
-
                           <tr *ngIf="i >= pageIndex * pageSize && i < (pageIndex + 1) * pageSize">
-                            <td><input type="checkbox" [(ngModel)]="plato.selected" (change)="updateTotal(); updateFormValues()" />
-
-                            
+                            <td>
+                              <input type="checkbox" [(ngModel)]="plato.selected" (change)="onPlatoSelectionChange(plato)" />
+                            </td>
                             <td>{{ plato.nombre }}</td>
                             <td>{{ plato.cantidad2 }}</td>
                             <td>{{ plato.precio | currency:'USD':'symbol':'1.2-2' }}</td>
                             <td>
                               <input type="number" [(ngModel)]="plato.cantidad" (change)="updateTotal()" min="0" step="1" style="width: 60px;" />
-                              <input type="hidden" [(ngModel)]="plato.nombre" name="nombrePlato">
-                              <input type="hidden" [(ngModel)]="plato.precio" name="precioPlato">
-                              
                             </td>
                           </tr>
                         </ng-container>
@@ -200,22 +331,28 @@
            
             </form>
   
-            <div class="form-row " >
+            <div class="form-row">
               <div class="form-group col-md-12">
-                <div class="formmm search-container container-centered" style="margin-top: 40px;">
-                  <div class="search-box container-fluid" >
-                    <div class="container-centered" >
+                <div class="formmm search-container container-centered">
+                  <div class="search-box container-fluid">
+                    <div class="container-centered">
                       <br><br>
                       <div class="text-center ">
-                        <h2 class="t">Menú</h2>
+  
+                        <h2 class="t">Menús</h2>
+  
                       </div>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="ml-auto" style="width: 170px;">
                           <div class="input-group">
+                            
+                            
                             <div style="display: flex; align-items: center; justify-content: flex-end;">
-                              <input type="search" class="form-control mb-2" placeholder="Buscar menú"   [(ngModel)]="filtro" (input)="filtrarPlatos()" >
+                              <input type="search" class="form-control mb-2" placeholder="Buscar menú" [(ngModel)]="filtro" (input)="filtrarPlatos()">
                               <i class="fa fa-search bm" aria-hidden="true" style="margin-left: 5px;"></i>
                             </div>
+  
+                            
                           </div>
                         </div>
                       </div>
@@ -235,18 +372,15 @@
                             <th>Cantidad</th>
                           </tr>
                           <ng-container *ngFor="let plato of platosFiltrados; let i = index">
-
                             <tr *ngIf="i >= pageIndex * pageSize && i < (pageIndex + 1) * pageSize">
-                              <td><input type="checkbox" [(ngModel)]="plato.selected" (change)="updateTotal(); updateFormValues()" />
-  
-                              
+                              <td>
+                                <input type="checkbox" [(ngModel)]="plato.selected" (change)="onPlatoSelectionChange(plato)" />
+                              </td>
                               <td>{{ plato.nombre }}</td>
                               <td>{{ plato.cantidad2 }}</td>
                               <td>{{ plato.precio | currency:'USD':'symbol':'1.2-2' }}</td>
                               <td>
                                 <input type="number" [(ngModel)]="plato.cantidad" (change)="updateTotal()" min="0" step="1" style="width: 60px;" />
-                                <input type="hidden" [(ngModel)]="plato.nombre" name="nombrePlato">
-                                
                               </td>
                             </tr>
                           </ng-container>
@@ -306,3 +440,49 @@
 </div>
 </div>
 </div>
+
+
+        </router-outlet>
+        <div *ngIf="isMaps('maps')">
+            <app-footer>
+  
+              
+            </app-footer>
+        </div>
+    </div>
+    
+  </div>
+  
+  
+  
+   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+   </div>
+  
+
+
+
