--- a/src/app/reporteingresos/reporteingresos.component.html
+++ b/src/app/reporteingresos/reporteingresos.component.html
@@ -208,6 +208,11 @@
     
     <div class="table-responsive">
       <table class="table">
+        <thead class="kiol">
+         Total de venta diaria: {{totalSum}} $
+
+        </thead> <br>
+        
         <thead class="text-primary">
           <th>Menú</th>
           <th>Fecha</th>
@@ -292,6 +297,10 @@
   <div class="card-body text-center">
     <div class="table-responsive">
       <table class="table">
+        <thead class="kiol">
+          Total de venta semanal: {{totalSum}} $
+ 
+         </thead>
         <thead class="text-primary">
           <th>Menú</th>
           <th>Fecha Inicio</th>
@@ -362,6 +371,10 @@
       
       <div class="table-responsive">
         <table class="table">
+          <thead class="kiol">
+            Total de venta mensual: {{totalSum}} $
+   
+           </thead>
           <thead class="text-primary">
             <th>Menú</th>
             <th>Mes</th>
