--- a/src/app/reporteingresos/reporteingresos.component.scss
+++ b/src/app/reporteingresos/reporteingresos.component.scss
@@ -201,6 +201,13 @@
 .k{
   font-weight: bold;
 }
+
+.kiol{
+  font-weight: bold;
+  font-size: 18px;
+  color: rgb(49, 90, 8);
+
+}
 /* Estilo para los íconos dentro de los botones */
 .pagination button i {
   margin-right: 5px; /* Puedes ajustar este valor según tu preferencia */
